node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <node-app-deployment>
  namespace: <your-namespace>
spec:
  replicas: 2
  selector:
    matchLabels:
      app: <node-app>
  template:
    metadata:
      labels:
        app: <node-app>
    spec:
      containers:
        - name: <name-of-container>
          image: <image>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
