node-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <node-app-service>
  namespace: <your-namespace>
spec:
  selector:
    app: <node-app>
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8080
  type: NodePort
