web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <web-app-service>
  namespace: <your-namespace>
spec:
  selector:
    app: <web-app>
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  type: NodePort
